--- a/ASMC.Core/packages.config
+++ b/ASMC.Core/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net45" requireReinstallation="true" />
+  <package id="Extended.Wpf.Toolkit" version="4.0.1" targetFramework="net462" />
   <package id="Fluent.Ribbon" version="6.1.0.326" targetFramework="net45" requireReinstallation="true" />
   <package id="NLog" version="4.7.3" targetFramework="net462" />
-  <package id="NLog.Config" version="4.6.5" targetFramework="net462" />
+  <package id="NLog.Config" version="4.7.3" targetFramework="net462" />
   <package id="NLog.Schema" version="4.7.3" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
 </packages>
