--- a/ASMC.Devices/ASMC.Devices.csproj
+++ b/ASMC.Devices/ASMC.Devices.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.Mvvm.v17.2">
+      <HintPath>..\..\..\ProtocolCreator\ProtocolCreator\bin\Debug\DevExpress.Mvvm.v17.2.dll</HintPath>
+    </Reference>
     <Reference Include="Ivi.Visa, Version=5.8.0.0, Culture=neutral, PublicKeyToken=a128c98f1d7717c1, processorArchitecture=MSIL">
       <HintPath>..\packages\Kelary.Ivi.Visa.5.8.908\lib\Ivi.Visa.dll</HintPath>
     </Reference>
@@ -43,7 +46,7 @@
       <HintPath>..\packages\NLog.4.7.3\lib\net45\NLog.dll</HintPath>
     </Reference>
     <Reference Include="Palsys.Data.Model">
-      <HintPath>..\..\Старые библиотеки, не удалять\Palsys.Data.Model.dll</HintPath>
+      <HintPath>..\..\..\..\ASU MS 7\Старые библиотеки, не удалять\Palsys.Data.Model.dll</HintPath>
     </Reference>
     <Reference Include="Palsys.Utils, Version=7.0.1900.1199, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
