--- a/ASMC.Devices/ASMC.Devices.csproj
+++ b/ASMC.Devices/ASMC.Devices.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DevExpress.Mvvm.v17.2">
-      <HintPath>..\..\..\ProtocolCreator\ProtocolCreator\bin\Debug\DevExpress.Mvvm.v17.2.dll</HintPath>
+      <HintPath>\\zrto.int\ogmetr\AutoMeas\Установка метролога для ЗРТО\Metr6\DevExpress.Mvvm.v17.2.dll</HintPath>
     </Reference>
     <Reference Include="Ivi.Visa, Version=5.8.0.0, Culture=neutral, PublicKeyToken=a128c98f1d7717c1, processorArchitecture=MSIL">
       <HintPath>..\packages\Kelary.Ivi.Visa.5.8.908\lib\Ivi.Visa.dll</HintPath>
