--- a/ASMC.Data.Model/ASMC.Data.Model.csproj
+++ b/ASMC.Data.Model/ASMC.Data.Model.csproj
@@ -70,6 +70,7 @@
     <Compile Include="BasicOperation.cs" />
     <Compile Include="Interface\IBasicOperation.cs" />
     <Compile Include="Interface\IProgram.cs" />
+    <Compile Include="MeasurePointAndMeasUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TreeNode.cs" />
     <Compile Include="UserItemOperation.cs" />
