--- a/Plugins/APPA/Appa107N/Appa107N.csproj
+++ b/Plugins/APPA/Appa107N/Appa107N.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>mkdir "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\" 2&gt; NUL
