Выполнена часть рефакторинга по групппировке классов. Распутываем клубок зависимостей

--- a/ASMC.Core/ASMC.Core.csproj
+++ b/ASMC.Core/ASMC.Core.csproj
@@ -142,6 +142,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Helps\" />
+    <Folder Include="Model\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Licenses.licx" />
