--- a/ASMC.Data.Model/ASMC.Data.Model.csproj
+++ b/ASMC.Data.Model/ASMC.Data.Model.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="AbstractProgram.cs" />
     <Compile Include="BasicOperation.cs" />
+    <Compile Include="IDevice.cs" />
     <Compile Include="Interface\IBasicOperation.cs" />
     <Compile Include="Interface\IProgram.cs" />
     <Compile Include="MeasurePointAndMeasUtils.cs" />
