--- a/AP.Utils/AP.Utils.csproj
+++ b/AP.Utils/AP.Utils.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Data\ProcedureAttribute.cs" />
     <Compile Include="Data\UdlBuilder.cs" />
     <Compile Include="Data\IDataProvider.cs" />
+    <Compile Include="Helps\HelpsMeasureUnits.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data\SqlDataProvider.cs" />
     <Compile Include="Utils.cs" />
@@ -79,5 +80,6 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
