Рефакторинг структуры проекта

--- a/ASMC.Common/ASMC.Common.csproj
+++ b/ASMC.Common/ASMC.Common.csproj
@@ -145,5 +145,8 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
