--- a/ASMC.Core/ASMC.Core.csproj
+++ b/ASMC.Core/ASMC.Core.csproj
@@ -52,6 +52,9 @@
     <Reference Include="Microsoft.WindowsAPICodePack">
       <HintPath>..\packages\WindowsAPICodePack-Core.1.1.2\lib\Microsoft.WindowsAPICodePack.dll</HintPath>
     </Reference>
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog.4.7.3\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -98,6 +101,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\IProgram.cs" />
+    <Compile Include="Model\IUserItemOperation.cs" />
+    <Compile Include="Model\OperationMetrControlBase.cs" />
+    <Compile Include="Model\ParagraphBase.cs" />
+    <Compile Include="Model\Program.cs" />
+    <Compile Include="Model\ServicePack.cs" />
+    <Compile Include="Model\Operation.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\QuestionTextService.cs" />
@@ -142,7 +152,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Helps\" />
-    <Folder Include="Model\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Licenses.licx" />
