Добавлен пример вызова пользовательского окна в Oper5VoltPulsation.
Добавлена поддержка формирования текста из таблицы для протокола
     var regInsTextByMark = new Regex(@"(^ITBm\w.+)");
                var regInsTextByReplase = new Regex(@"(^RepT\w.+)");
                var regInTableByMark = new Regex(@"(^ITabBm\w.+)");
                var regFillTableByMark = new Regex(@"(^FillTabBm\w.+)");

--- a/ASMC.Devices/ASMC.Devices.csproj
+++ b/ASMC.Devices/ASMC.Devices.csproj
@@ -103,6 +103,7 @@
     <Compile Include="SimpleScada\Dv2TsSensor.cs" />
     <Compile Include="VirtMeasInst\NetworkVoltQualityMeter.cs" />
     <Compile Include="VirtMeasInst\VirtualSensor.cs" />
+    <Compile Include="WithoutInterface\Voltmetr\B5_57.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
