--- a/ASMC.Common/ASMC.Common.csproj
+++ b/ASMC.Common/ASMC.Common.csproj
@@ -90,6 +90,7 @@
     <Compile Include="ISupportSettings.cs" />
     <Compile Include="ITaskMessageService.cs" />
     <Compile Include="Keys.cs" />
+    <Compile Include="Model\TreeNodeVm.cs" />
     <Compile Include="NativeMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\IWindowSettings.cs" />
@@ -145,8 +146,6 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Model\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
