--- a/ASMC.Data.Model/ASMC.Data.Model.csproj
+++ b/ASMC.Data.Model/ASMC.Data.Model.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Interface\IBasicOperation.cs" />
     <Compile Include="MeasurePointAndMeasUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TreeNode.cs" />
     <Compile Include="UserItemOperation.cs" />
   </ItemGroup>
   <ItemGroup>
