--- a/ASMC/App.config
+++ b/ASMC/App.config
@@ -10,14 +10,14 @@
     <targets>
       <target xsi:type="File"  maxArchiveFiles="5" archiveEvery="Hour" name="logDebug" 
 			  fileName="${specialfolder:folder=ApplicationData}\ASMC\logs\Debug\${shortdate}.log" layout="[${longdate}] ${processname} ${processid} ${level} ${logger} ${message}" />
-	  <target xsi:type="File"  maxArchiveFiles="14" archiveEvery="Day" name="logWarn"
+	  <target xsi:type="File"  maxArchiveFiles="14" archiveEvery="Day" name="logError"
 			  fileName="${specialfolder:folder=ApplicationData}\ASMC\logs\Error\${shortdate}.log" layout="[${longdate}] ${processname} ${processid} ${level} ${logger} ${message}" />
 	  <target xsi:type="File"  maxArchiveFiles="7" archiveEvery="Day" name="logInfo"
 			  fileName="${specialfolder:folder=ApplicationData}\ASMC\logs\${shortdate}.log" layout="[${longdate}] ${processname} ${processid} ${level} ${logger} ${message}" />
     </targets>
     <rules>
       <logger name="*" minlevel="Debug" writeTo="logDebug" />
-	  <logger name="*" minlevel="Warn" writeTo="logWarn" />
+	  <logger name="*" minlevel="Error" writeTo="logError" />
 	  <logger name="*" minlevel="Info"  writeTo="logInfo" />
     </rules>
   </nlog>
