--- a/ASMC.Common/ASMC.Common.csproj
+++ b/ASMC.Common/ASMC.Common.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Settings\SettingsSelector.cs" />
     <Compile Include="Settings\WindowSettingsBase.cs" />
     <Compile Include="UI\FormServiceBase.cs" />
+    <Compile Include="UI\GridHelpers.cs" />
     <Compile Include="UI\MessageBoxService.cs" />
     <Compile Include="UI\TaskMessageService.cs" />
     <Compile Include="UI\WindowAttachedProperties.cs" />
