--- a/ASMC.Data.Model/ASMC.Data.Model.csproj
+++ b/ASMC.Data.Model/ASMC.Data.Model.csproj
@@ -58,6 +58,7 @@
     <Compile Include="BasicOperation.cs" />
     <Compile Include="IDevice.cs" />
     <Compile Include="Interface\IBasicOperation.cs" />
+    <Compile Include="Interface\ICell.cs" />
     <Compile Include="MeasurePointAndMeasUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TreeNode.cs" />
