Исправлен принцип формирования имен протоколов - убраны запрещенные сиволы
Доработана логика работы мультиметров APPA_107N_109N
прописаные дополнительные логи

--- a/ASMC/ASMC.csproj
+++ b/ASMC/ASMC.csproj
@@ -39,11 +39,12 @@
   <PropertyGroup>
     <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
-  </PropertyGroup>
+  <PropertyGroup />
   <PropertyGroup>
     <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DevExpress.Data.v17.2">
