--- a/ASMC.MVision/packages.config
+++ b/ASMC.MVision/packages.config
@@ -8,5 +8,6 @@
   <package id="AForge.Video" version="2.2.5" targetFramework="net45" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net45" />
   <package id="AForge.Vision" version="2.2.5" targetFramework="net45" />
+  <package id="NLog" version="4.7.3" targetFramework="net462" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net45" />
 </packages>
