VM для работы с Web cam

--- a/Plugins/APPA/Appa109N/Appa109N.csproj
+++ b/Plugins/APPA/Appa109N/Appa109N.csproj
@@ -65,6 +65,9 @@
       <Name>APPA-107N-109NBasePlugin</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>mkdir "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\" 2&gt; NUL
