--- a/Plugins/Test/Test.csproj
+++ b/Plugins/Test/Test.csproj
@@ -61,6 +61,9 @@
       <DependentUpon>Table.xaml</DependentUpon>
     </Compile>
     <Compile Include="Test.cs" />
+    <Compile Include="WebView.xaml.cs">
+      <DependentUpon>WebView.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\ASMC.Common\ASMC.Common.csproj">
@@ -85,6 +88,13 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="WebView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
