--- a/ASMC.Common/packages.config
+++ b/ASMC.Common/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Accord" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Video" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Video.DirectShow" version="3.8.0" targetFramework="net462" />
   <package id="Extended.Wpf.Toolkit" version="4.0.1" targetFramework="net462" />
   <package id="NLog" version="4.7.3" targetFramework="net462" />
 </packages>
