--- a/ASMC.MVision/packages.config
+++ b/ASMC.MVision/packages.config
@@ -1,13 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AForge" version="2.2.5" targetFramework="net45" />
-  <package id="AForge.Genetic" version="2.2.5" targetFramework="net45" />
-  <package id="AForge.Imaging" version="2.2.5" targetFramework="net45" />
-  <package id="AForge.Math" version="2.2.5" targetFramework="net45" />
-  <package id="AForge.Neuro" version="2.2.5" targetFramework="net45" />
-  <package id="AForge.Video" version="2.2.5" targetFramework="net45" />
-  <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net45" />
-  <package id="AForge.Vision" version="2.2.5" targetFramework="net45" />
+  <package id="Accord" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Imaging" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Math" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Statistics" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Video" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.Video.DirectShow" version="3.8.0" targetFramework="net462" />
   <package id="NLog" version="4.7.3" targetFramework="net462" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net45" />
 </packages>
