--- a/AP.Reports/packages.config
+++ b/AP.Reports/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="BarCode" version="4.0.2.2" targetFramework="net45" />
   <package id="ClosedXML" version="0.94.2" targetFramework="net45" />
-  <package id="DocumentFormat.OpenXml" version="2.9.1" targetFramework="net45" />
-  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net45" />
+  <package id="DocumentFormat.OpenXml" version="2.11.3" targetFramework="net462" />
+  <package id="ExcelNumberFormat" version="1.0.10" targetFramework="net462" />
   <package id="FastMember" version="1.5.0" targetFramework="net462" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net45" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net45" />
@@ -11,5 +11,7 @@
   <package id="NLog.Config" version="4.7.3" targetFramework="net462" />
   <package id="NLog.Schema" version="4.7.3" targetFramework="net462" />
   <package id="Open-Xml-PowerTools" version="4.4.0" targetFramework="net45" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.IO.Packaging" version="4.7.0" targetFramework="net462" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net45" />
 </packages>
