--- a/Plugins/Tektronix/TDS2022B/TDS2022B.csproj
+++ b/Plugins/Tektronix/TDS2022B/TDS2022B.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C362FA9E-DF8D-49B0-A86A-64661ECDBA9E}</ProjectGuid>
+    <ProjectGuid>{26E60C8C-35EA-494E-8317-3B2BB09A9216}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TDS_BasePlugin</RootNamespace>
-    <AssemblyName>TDS_BasePlugin</AssemblyName>
+    <RootNamespace>TDS2022B</RootNamespace>
+    <AssemblyName>TDS2022B</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DevExpress.Mvvm.v17.2">
-      <HintPath>\\zrto.int\ogmetr\AutoMeas\Установка метролога для ЗРТО\Metr6\DevExpress.Mvvm.v17.2.dll</HintPath>
+      <HintPath>\\zrto.int\OGMetr\AutoMeas\DLL\DevExpress.Mvvm.v17.2.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TDS_BasePlugin.cs" />
+    <Compile Include="TDS2022BPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -64,10 +64,15 @@
       <Project>{c606fa94-0b7e-4698-801f-206ca9da0cef}</Project>
       <Name>ASMC.Devices</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <None Include="Resource\32618-06 TDS.dotx" />
+    <ProjectReference Include="..\TDS_BasePlugin\TDS_BasePlugin.csproj">
+      <Project>{c362fa9e-df8d-49b0-a86a-64661ecdba9e}</Project>
+      <Name>TDS_BasePlugin</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>mkdir "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\" 2&gt; NUL
+mkdir "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\$(TargetName)\Resources\" 2&gt; NUL
+xcopy "$(TargetPath)" "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\$(TargetName)\" /Y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
