--- a/ASMC/ASMC.csproj
+++ b/ASMC/ASMC.csproj
@@ -254,6 +254,10 @@
       <Project>{9e15a5e6-f812-4e56-bf83-2b5c0d247f96}</Project>
       <Name>B5-71-PRO_Abstract</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Plugins\Tektronix\TDS_BasePlugin\TDS_BasePlugin.csproj">
+      <Project>{c362fa9e-df8d-49b0-a86a-64661ecdba9e}</Project>
+      <Name>TDS_BasePlugin</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\ce91c577bcf0a799e275968ebe599d0e.png" />
