--- a/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/Indicator_10.csproj
+++ b/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/Indicator_10.csproj
@@ -87,6 +87,7 @@
     </Compile>
     <Compile Include="ParagraphBase.cs" />
     <Compile Include="ViewModel\MeasuringForceViewModel.cs" />
+    <Compile Include="ViewModel\PerpendicularPressureViewModel.cs" />
     <Compile Include="View\MeasuringForceView.xaml.cs">
       <DependentUpon>MeasuringForceView.xaml</DependentUpon>
     </Compile>
